Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33446

MSBuild cannot build .sln generated for VS2012

    XMLWordPrintable

Details

    • 8d2c6206fdf564aa75680f4fea58e31d26a3d6dd

    Description

      • Solution/projects created using qmake -r -tp vc.
      • Attempting to build using MSBuild does not build anything.
      • Open/close solution once in VS2012 IDE fixes .sln errors.

      Fragment of generated .sln file:
      GlobalSection(SolutionConfiguration) = preSolution
      ConfigName.0 = Debug|Win32
      ConfigName.1 = Release|Win32
      EndGlobalSection
      GlobalSection(ProjectConfiguration) = postSolution

      Fragment of fixed .sln file:
      GlobalSection(SolutionConfigurationPlatforms) = preSolution
      Debug|Win32 = Debug|Win32
      Release|Win32 = Release|Win32
      EndGlobalSection
      GlobalSection(ProjectConfigurationPlatforms) = postSolution

      Attachments

        1. fixed.sln
          8 kB
        2. generated.sln
          8 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            pomfrit Leo Havmøller
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes