*.sln not generated correctly for VS2012 and VS2010

msbuild fails to build project since sln not generated correctly

Task-number: QTBUG-33446
Change-Id: If92ea743b1b407446873210090aa8591a491abad
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: 8d2c6206fdf564aa75680f4fea58e31d26a3d6dd https://github.com/qt/qtbase/commit/8d2c6206fdf564aa75680f4fea58e31d26a3d6dd